--- a/nimbus/base/templates/base_login.html
+++ b/nimbus/base/templates/base_login.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
@@ -86,8 +87,8 @@
 			</div>		<!-- .login ends -->
 
             <div id="footer">
-				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
-				<a href="/LICENSE/">Terms and License</a></p>
+                <p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> {% trans "by" %} <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
+                <a href="/LICENSE/">{% trans "Terms and License" %}</a></p>
 				<p class="right">Nimbus Opensource Backup v1.3</p>
 			</div>
 
