--- a/nimbus/base/templates/stat_block.html
+++ b/nimbus/base/templates/stat_block.html
@@ -1,20 +1,25 @@
+{% load i18n %}
 {% comment %}
-Tipos possíveis: ok, warn, error
+Possible types: ok, warn, error
 {% endcomment %}
-<h2>Histórico</h2>
+<h2>{% trans "History" %}</h2>
 <hr />
 <div class="content_block cols_{{item|length}}" id="accordion">
 	{% for job in last_jobs %}
     <h3>
 		<span class="status_{{job.general_status}}">Status {{job.human_general_status}}</span>
 		{% if job.type == 'R'%}
-        {{job.start_time}}: Procedimento de restauração para '{{job.procedure.computer.name}}'
+        {% blocktrans %}
+        {{job.start_time}}: Restore job to '{{job.procedure.computer.name}}'
+        {% endblocktrans %}
 		{% else %}
-        {{job.start_time}}: Procedimento de {{job.backup_type}} de '{{job.procedure.name}}' para '{{job.procedure.computer.name}}'
+        {% blocktrans %}
+        {{job.start_time}}: Procedure of {{job.backup_type}} from '{{job.procedure.name}}' to '{{job.procedure.computer.name}}'
+        {% endblocktrans %}
 		{% endif %}
 		{% if job.human_general_status == "executando" or job.human_general_status == "esperando" %}
 		<!-- <span class="cancel_job">Cancelar</span> -->
-		<button type="submit" class="cancel_job css3button negative" value="Desativar" id="{{job.jobid}}">Cancelar execução</button>
+        <button type="submit" class="cancel_job css3button negative" value="Desativar" id="{{job.jobid}}">{% trans "Cancel" %}</button>
 		{% endif %}
         <div class="clear"></div>
 	</h3>
@@ -22,34 +27,34 @@ Tipos possíveis: ok, warn, error
 	   <table cellpadding="0" cellspacing="0">
 	   <tbody>
 			{% if job.type != 'R'%}
-            <tr><td>Procedimento:</td>
+            <tr><td>{% trans "Procedure" %}:</td>
             {% if job.procedure %}
             <td>{{job.procedure}}</td>
             {% else %}
-            <td>Este procedimento não existe mais.</td>
+            <td> {% trans "This procedure is no more"%}</td>
             {% endif %}
             </tr>
 			{% endif %}
             <tr>
             {% if job.procedure.computer %}
-            <td>Computador:</td><td>{{job.procedure.computer.name}} ({{job.procedure.computer.address}})</td>
+            <td> {% trans "Computer"%}:</td><td>{{job.procedure.computer.name}} ({{job.procedure.computer.address}})</td>
             {% else %}
-            <td>Computador:</td> <td>Computador não encontrado</td>
+            <td> {% trans "Computer"%}:</td> <td>{% trans "Computer not found" %}</td>
             {% endif %}</tr>
-            {% if job.type != 'R'%}<tr><td>Tipo de backup:</td><td>{{job.backup_level}}</td></tr>{% endif %}
-            <tr><td>Agendado para:</td><td>{{job.schedule_time}}</td></tr>
-            <tr><td>Inicio: </td><td>{{job.start_time}}</td></tr>
+            {% if job.type != 'R'%}<tr><td>{% trans "Backup level "%}:</td><td>{{job.backup_level}}</td></tr>{% endif %}
+            <tr><td>{% trans "Schedule time"%}:</td><td>{{job.schedule_time}}</td></tr>
+            <tr><td>{% trans "Start"%}: </td><td>{{job.start_time}}</td></tr>
             {% if job.end_time %}
-            <tr><td>Término:</td><td>{{job.end_time}}</td></tr>
-            <tr><td>Duração:</td><td>{{job.duration}}</td></tr>
+            <tr><td>{% trans "End"%}:</td><td>{{job.end_time}}</td></tr>
+            <tr><td>{% trans "Duration"%}:</td><td>{{job.duration}}</td></tr>
             {% else %}
-            <tr><td>Término:</td><td>O procedimento ainda não foi concluído</td></tr>
-            <tr><td>Duração:</td><td>O procedimento ainda não foi concluído</td></tr>
+            <tr><td>{% trans "End"%}:</td><td>{% trans "The procedure was not completed" %}</td></tr>
+            <tr><td>{% trans "Duration"%}:</td><td>{% trans "The procedure was not completed"%}</td></tr>
             {% endif %}
-            <tr><td>Arquivos copiados:</td><td>{{job.jobfiles}} ({{job.human_readable_size.size}} {{job.human_readable_size.unit}})</td></tr>
+            <tr><td>{% trans "Copied files"%}:</td><td>{{job.jobfiles}} ({{job.human_readable_size.size}} {{job.human_readable_size.unit}})</td></tr>
             
-            <tr><td>Status:</td><td>{{job.status_message}}</td></tr>
-            <tr><td>Erros:</td><td>{{job.joberrors}}</td></tr>
+            <tr><td>{% trans "Status"%}:</td><td>{{job.status_message}}</td></tr>
+            <tr><td>{% trans "Errors"%}:</td><td>{{job.joberrors}}</td></tr>
 		</table>
 		<hr />
 	</div>
