--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -103,8 +103,8 @@
 			</div>		<!-- .login ends -->
 
             <div id="footer">
-				<p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> é uma iniciativa <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
-				<a href="/LICENSE/">Terms and License</a></p>
+                <p class="left"><a href="http://trynimbus.com">Nimbus Opensource</a> {% trans "by" %} <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" alt="Veezor® Network Intelligence" /></a> |
+                <a href="/LICENSE/">{% trans "Terms and License" %}</a></p>
 				<p class="right">Nimbus Opensource Backup v1.3</p>
 			</div>
 
