--- a/nimbus/computers/templates/base_computers.html
+++ b/nimbus/computers/templates/base_computers.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
@@ -32,14 +33,14 @@
                     {{ hidden }}
                 {% endfor %}
             {% endfor %}
-            <a href="#" id="add_group">Adicionar grupo</a>
+            <a href="#" id="add_group">{% trans "Add group" %}</a>
             <div class="add_group">
-                <label>Nome do grupo:</label>
+                <label>{% trans "Group name"%}:</label>
                 <input type="text" name="group" value="" class="text small" id="add_group_name" /> 
-                <button type="submit" class="css3button positive" value="Adicionar" id="add_group_submit">Adicionar Grupo</button> ou <a href="#" class="" id="add_group_cancel">Cancelar</a>
+                <button type="submit" class="css3button positive" value="Adicionar" id="add_group_submit">{% trans "Add group" %}</button> {% trans "or" %} <a href="#" class="" id="add_group_cancel">{% trans "Cancel" %}</a>
             </div>
             <br/>
-            <p><button type="submit" class="css3button positive big" value="Atualizar">Atualizar</button></p>
+            <p><button type="submit" class="css3button positive big" value="Atualizar">{% trans "Update"%}</button></p>
         </form>
     
     </div>
