--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
@@ -19,8 +20,8 @@
 
     <div class="block_content">
         <p>
-            <a href="/computers/add" class="css3button positive">Adicionar computador</a>
-            <a href="/computers/" class="css3button positive">Visualizar todos os computadores</a>
+        <a href="/computers/add" class="css3button positive">{% trans "Add computer"%}</a>
+        <a href="/computers/" class="css3button positive">{% trans "List computers"%}</a>
         </p>
 
         <div class="computer {% if not computer.active %}desativado{% endif %}">
@@ -32,29 +33,29 @@
                 </div>
                 <p class="description">{{computer.description}}</p>
                 <p class="options">
-                    <a href="/computers/{{computer.id}}/edit/" class="css3button positive">Editar</a>
-				    <a href="/computers/{{computer.id}}/delete/" class="css3button negative">Remover</a>
+                    <a href="/computers/{{computer.id}}/edit/" class="css3button positive">{% trans "Edit"%}</a>
+                    <a href="/computers/{{computer.id}}/delete/" class="css3button negative">{% trans "Remove"%}</a>
 				</p>
             </div>
             <div class="right">
                 <div class="floatright">
                     {% if not computer.active %}
                     <form action="/computers/{{computer.id}}/activate/" method="post" class="floatright">
-                        <button type="submit" class="css3button positive" value="Ativar">Ativar</button>
+                        <button type="submit" class="css3button positive" value="Ativar">{% trans "Activate"%}</button>
                     </form>
                     {% endif %}
                     {% if computer.procedure_set.count %}
                     <form action="/restore/{{computer.id}}/view/" method="post" class="floatright">
-                        <button type="submit" class="css3button positive" value="Restaurar">Restaurar</button>
+                        <button type="submit" class="css3button positive" value="Restaurar">{% trans "Restore"%}</button>
                     </form>
                     {% endif %}
-                    <a href="/procedures/add/?comp_id={{ computer.id }}" class="floatright css3button positive">Criar Backup</a>
-                    <a href="/computers/{{computer.id}}/configure/" class="css3button positive">Reconfigurar</a>
+                    <a href="/procedures/add/?comp_id={{ computer.id }}" class="floatright css3button positive">{% trans "Backup"%}</a>
+                    <a href="/computers/{{computer.id}}/configure/" class="css3button positive">{% trans "Reconfigure"%}</a>
                 </div>
                 {% if not computer.procedure_set.count %}
-                    <p>Não existem procedimentos para este computador.</p>
+                    <p>{% trans "There are no procedures for this computer."%}</p>
                 {% else %}
-                    <h4 class="floatleft">ARQUIVOS PARA BACKUP</h4>
+                    <h4 class="floatleft">{% trans "FILES TO BACKUP"%}</h4>
                     <div class="clear"></div>
                     <div class="files">
                         {% for proc in computer.procedure_set.all %}
@@ -68,10 +69,10 @@
                             </div>
                             <div class="fileset_detail">
                                 <br/>
-                                Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
-                                Local de armazenamento: <strong><a href="/storages/{{proc.storage.id}}/view"><span title="Endereço: {{proc.storage.address}} - {{proc.storage.description|slice:":25"}}...">{{proc.storage.name}}</span></a></strong><br/>
-                                Agendamento: <strong>{{proc.schedule}}</strong> <small>(<a href="/procedures/{{proc.id}}/edit">editar</a>)</small><br/>
-                                Arquivos: <small>(<a href="/procedures/{{proc.id}}/edit/">editar</a>)</small>
+                                {% trans "Offsite enabled"%}? <strong>{% if proc.offsite_on %}{% trans "Yes"%}{% else %}{% trans "No"%}{% endif %}</strong><br/>
+                                {% trans "Storage"%}: <strong><a href="/storages/{{proc.storage.id}}/view"><span title="{% trans "IP Address"%}: {{proc.storage.address}} - {{proc.storage.description|slice:":25"}}...">{{proc.storage.name}}</span></a></strong><br/>
+                                {% trans "Schedule"%}: <strong>{{proc.schedule}}</strong> <small>(<a href="/procedures/{{proc.id}}/edit">{% trans "edit"%}</a>)</small><br/>
+                                {% trans "Files"%}: <small>(<a href="/procedures/{{proc.id}}/edit/">{% trans "edit"%}</a>)</small>
                                 <ul>
                                     {% for file in proc.fileset.files.all %}
                                     <li><strong>{{file.path}}</strong></li>
