--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/computers.css" />
@@ -18,19 +19,19 @@
 
     <div class="block_content">
 		{% if inactive_computers %}
-        <div class="left">{% if inactive_computers|length == 1%}Existe um computador a ser ativado. <a href="/computers/add" class="css3button positive">Ativar novo computador</a>{% else %}Existem {{inactive_computers|length}} computadores a serem ativados. <a href="/computers/add" class="css3button positive">Ativar novos computadores</a>{% endif %}</div>
+        <div class="left">{% if inactive_computers|length == 1%}{% trans "There is a computer to be activated." %} <a href="/computers/add" class="css3button positive">{% trans "Activate new computer"%}</a>{% else %} {% trans "There are"%} {{inactive_computers|length}} {% trans "computers to be activated" %} <a href="/computers/add" class="css3button positive">{% trans "Activate new computers" %}</a>{% endif %}</div>
 		{% else %}
-		<div class="left">Não existem computadores a serem ativados</div>
+        <div class="left">{% trans "There are no computers to be activated" %}</div>
 		{% endif %}
 		<div id="computers-filter">
 			<form action="/computers/list" method="get">
 			<select name="group"   id="computers-group">
-				<option value="">Filtrar por Grupo</option>
+                <option value=""> {% trans "Filter by group" %} </option>
 				{% for group in groups %}
 					<option value="{{group.name}}">{{group.name}}</option>
 				{% endfor%}
 			</select>
-			<button type="submit" class="css3button positive" value="Filtrar">Filtrar</button>
+            <button type="submit" class="css3button positive" value="Filtrar">{% trans "Filter"%}</button>
 			</form>
 		</div>
 		
@@ -44,12 +45,12 @@
                         <img src="/media/icons/computer.png" alt="" />
                         <h3 class="name"><a href="/computers/{{ comp.id }}/view">{{comp.name}}</a></h3>
                         <small class="ip">{{comp.address}} - {{comp.operation_system|title}} </small> <br/>
-                        <small class="ip">Grupos: {% for g in comp.groups.all %} {{g.name}} {% endfor %}</small>
+                        <small class="ip">{% trans "Group:" %} {% for g in comp.groups.all %} {{g.name}} {% endfor %}</small>
                     </div>
                     <p class="description">{{comp.description}}</p>
                     <p class="options">
-                        <a href="/computers/{{comp.id}}/edit/" class="css3button positive pill">Editar</a>
-                        <a href="/computers/{{comp.id}}/delete/" class="css3button negative pill">Remover</a>
+                        <a href="/computers/{{comp.id}}/edit/" class="css3button positive pill">{% trans "Edit" %}</a>
+                        <a href="/computers/{{comp.id}}/delete/" class="css3button negative pill">{% trans "Remove" %}</a>
                     </p>
                 </div>
                 <div class="right">
@@ -60,16 +61,16 @@
                         </form>
                         {% endif %}
                         {% if comp.procedure_set.count %}
-                        <a href="/restore/step2?computer_id={{ comp.id }}" class="floatright css3button positive">Restaurar</a>
+                        <a href="/restore/step2?computer_id={{ comp.id }}" class="floatright css3button positive"> {% trans "Restore"%} </a>
                         {% endif %}
-                        <a href="/procedures/add/?comp_id={{ comp.id }}" class="floatright css3button positive">Criar Backup</a>
-                        <a href="/computers/{{comp.id}}/configure/" class="css3button positive">Reconfigurar</a>
+                        <a href="/procedures/add/?comp_id={{ comp.id }}" class="floatright css3button positive">{% trans "Create backup"%}</a>
+                        <a href="/computers/{{comp.id}}/configure/" class="css3button positive">{% trans "Reconfigurate" %}</a>
                         
                     </div>
                     {% if not comp.procedure_set.count %}
-                        <p>Não existem procedimentos para este computador.</p>
+                    <p>{% trans "There are no procedures for this computer"%}</p>
                     {% else %}
-                        <h4 class="floatleft">ARQUIVOS PARA BACKUP</h4>
+                    <h4 class="floatleft">{% trans "FILES TO BACKUP"%}</h4>
                         <div class="clear"></div>
                         <div class="files">
                             {% for proc in comp.procedure_set.all %}
@@ -83,10 +84,10 @@
                                 </div>
                                 <div class="fileset_detail">
                                     <br/>
-                                    Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
-                                    Local de armazenamento: <strong><a href="/storages/{{proc.storage.id}}/view"><span title="Endereço: {{proc.storage.address}} - {{proc.storage.description|slice:":25"}}...">{{proc.storage.name}}</span></a></strong><br/>
-                                    Agendamento: <strong>{{proc.schedule}}</strong> <small>(<a href="/procedures/{{proc.id}}/edit">editar</a>)</small><br/>
-                                    Arquivos: <small>(<a href="/procedures/{{proc.id}}/edit/">editar</a>)</small>
+                                    {% trans "Offsite enabled?" %} <strong>{% if proc.offsite_on %}{% trans "Yes"%}{% else %}{% trans "No"%}{% endif %}</strong><br/>
+                                    {% trans "Storage:"%} <strong><a href="/storages/{{proc.storage.id}}/view"><span title="{% trans "IP Address:"%} {{proc.storage.address}} - {{proc.storage.description|slice:":25"}}...">{{proc.storage.name}}</span></a></strong><br/>
+                                    {% trans "Schedule:"%} <strong>{{proc.schedule}}</strong> <small>(<a href="/procedures/{{proc.id}}/edit">{% trans "edit"%}</a>)</small><br/>
+                                    {% trans "Files:"%} <small>(<a href="/procedures/{{proc.id}}/edit/">{% trans "edit"%}</a>)</small>
 
                                     <ul>
                                         {% for file in proc.fileset.files.all %}
@@ -103,7 +104,7 @@
                 <div class="clear"></div>
             </div>
         {% empty %}
-            <p>Não existem computadores adicionados.</p>
+        <p>{% trans "There are no registred computers" %}</p>
         {% endfor %}
         </div>
     
