--- a/nimbus/computers/templates/remove_computer.html
+++ b/nimbus/computers/templates/remove_computer.html
@@ -12,49 +12,59 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Confirmação de remoção</h2>
+        <h2>{% trans "Removal Confirmation"%}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
         <form method="post" action="">
-            <h1>Você está prestes a remover o computador "{{computer.name}}".</h1>
+            <h1>{% trans "You are about to remove computer" %} "{{computer.name}}".</h1>
 			<ul>
 				{% if procedures %}
-				<li> Os seguintes procedimentos de backup estão associados a este computador e serão apagados:</li>
+                <li> {% trans "The following backup procedures are associated with this computer and will be deleted:" %} </li>
 				<ol>
 					{% for procedure in procedures %}
 					<li>{{procedure.name}}</li>
 					<ol>
 					{% if procedure.fileset.is_model %}
-					<li>O perfil do conjunto de arquivos <strong>"{{procedure.fileset.name}}"</strong> não será afetado.</li>
+                    <li>
+                    {%blocktrans%}
+					 The file set's profile <strong>"{{procedure.fileset.name}}"</strong> will not be affected
+                    {%endblocktrans%}
+                    </li>
 					{% else %}
-					<li>O conjunto de arquivos <strong>"{{procedure.fileset.name}}"</strong> é usado apenas por <strong>"{{procedure.name}}"</strong> e <strong>será removido</strong>.</li>
+                    {%blocktrans%}
+					<li>The file set <strong>"{{procedure.fileset.name}}"</strong> is used only by <strong>"{{procedure.name}}"</strong> and <strong>will be removed</strong>.</li>
+                    {%endblocktrans%}
 					{% endif %}
 					{% if procedure.schedule.is_model %}
-					<li>O perfil de agendamento <strong>"{{procedure.schedule.name}}"</strong> não será afetado.</li>
+                    {%blocktrans%}
+					<li> The <strong>"{{procedure.schedule.name}}"</strong> profile schedule will not be affected.</li>
+                    {%endblocktrans%}
 					{% else %}
-					<li>O agendamento <strong>"{{procedure.schedule.name}}"</strong> é usado apenas por <strong>"{{procedure.name}}"</strong> e <strong>será removido</strong>.</li>
+                    {%blocktrans%}
+					<li>The schedule <strong>"{{procedure.schedule.name}}"</strong> is used only by <strong>"{{procedure.name}}"</strong> and <strong>will be removed</strong>.</li>
+                    {%endblocktrans%}
 					{% endif %}
 					</ol>
 					{% endfor %}
 				</ol>
 				{% else %}
-				<li>Não existem procedimentos de backup associados a este computador.</li>
+                <li>{% trans "here are no backup procedures associated for this computer."%}</li>
 				{% endif %}
 				{% if last_jobs %}
-				<li>Os seguintes backups serão apagados e não mais poderão ser restaurados:</li>
+                <li>{% trans "There are no backups related to this computer" %}</li>
 				<div style="margin-left: 50px; margin-right: 50px;">
         		{% include "stat_block.html" %}
 				</div>
 				{% else %}
-				<li>Não existem backups salvos relacionados a este computador.</li>
+                <li>{% trans "The following backups will be deleted and their recovery will be unavailable." %}</li>
 				{% endif %}
 			</ul>
             <br \>
-			<p><strong>Esta operação não poderá ser desfeita. Deseja prosseguir mesmo assim?</strong></p>
+            <p><strong>{% trans "This operation cannot be undone, are you sure you want to proceed?" %}</strong></p>
             <p>
                 <!-- <input type="submit" class="css3button positive" name="confirm" value="Prosseguir" /> ou <a href="" onclick="history.back(-1); return false;">Cancelar</a> -->
-                <a href="/computers/{{computer.id}}/do_delete/" class="css3button negative">Excluir</a> ou <a href="" class="css3button positive" onclick="history.back(-1); return false;">Cancelar</a>
+                <a href="/computers/{{computer.id}}/do_delete/" class="css3button negative">{% trans "Remove"%}</a> {% trans "or" %}  <a href="" class="css3button positive" onclick="history.back(-1); return false;">{% trans "Cancel"%}</a>
             </p>
         </form>
     </div>
