--- a/nimbus/reports/templates/emailtest.html
+++ b/nimbus/reports/templates/emailtest.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 
 {% block page %}
@@ -8,14 +9,14 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Configuração de notificações por email</h2>
+        <h2>{% trans "Mail notification" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
     
         <form method="post" action="{% url nimbus.reports.views.email_test %}">
-            <a href="{% url nimbus.reports.views.email_conf %}" class="css3button positive big floatright">Voltar</a>
-            <p><button type="submit" class="css3button big positive floatleft" value="Testar configuração">Testar configuração</button></p>
+            <a href="{% url nimbus.reports.views.email_conf %}" class="css3button positive big floatright">{% trans "Back" %}</a>
+            <p><button type="submit" class="css3button big positive floatleft" value="Testar configuração">{% trans "Test config" %}</button></p>
         </form>
 
 
