--- a/nimbus/network/templates/myform.html
+++ b/nimbus/network/templates/myform.html
@@ -1,20 +1,20 @@
 {% extends "base.html" %}
-
 {% block page %}
+{% load i18n %}
 
 <div class="block">
 
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Configuração de Rede</h2>
+		<h2>{% trans "Network configuration" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
 
         <form method="post" action="{% url nimbus.network.views.network_conf %}" id="network_config">
             {% include "form.html" %}
-            <p><button type="submit" class="css3button big positive" value="Atualizar">Atualizar</button></p>
+            <p><button type="submit" class="css3button big positive" value="Atualizar">{% trans "Update" %}</button></p>
         </form>
     
     </div>
