--- a/nimbus/offsite/templates/list_volume.html
+++ b/nimbus/offsite/templates/list_volume.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load i18n %}
+
 {% block content %}
 
 
@@ -7,7 +9,7 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Volumes</h2>
+		<h2>{% trans "Capacity" %}</h2>
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
