--- a/nimbus/offsite/templates/offsite_menu.html
+++ b/nimbus/offsite/templates/offsite_menu.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 <li class="active"><a href="#">Offsite</a>
     <ul>
-	    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
-	    <li><a href="/offsite/edit">Editar configurações</a></li>
-        <li><a href="/offsite/upload_queue">Uploads ativos</a></li>
-        <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
-        <li><a href="/offsite/list_offsite">Procedimentos do offsite</a></li>
+	    <li><a href="/offsite/detail">{% trans "Offsite details" %}</a></li>
+	    <li><a href="/offsite/edit">{% trans "Edit configuations" %}</a></li>
+        <li><a href="/offsite/upload_queue">{% trans "Active uploads" %}</a></li>
+        <li><a href="/offsite/list_downloadrequest">{% trans "Active downloads" %}</a></li>
+        <li><a href="/offsite/list_offsite">{% trans "Offsite procedures" %}</a></li>
     </ul>
 </li>
