--- a/nimbus/offsite/templates/list_downloadrequest.html
+++ b/nimbus/offsite/templates/list_downloadrequest.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block headtags %}
 <link rel="stylesheet" type="text/css" href="/media/css/offsite.css" />
@@ -12,25 +13,25 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Downloads ativos</h2>
+		<h2>{% trans "Actives downloads" %}</h2>
 		<div class="right">
-            A lista será atualizada em <span class="tempo_restante">10</span> segundos. <small>(<a href="#" rel="{{script_name}}" class="atualizar_agora">atualizar agora</a>)</small>
+            {% trans "The list will be updated within" %} <span class="tempo_restante">10</span> {% trans "seconds." %} <small>(<a href="#" rel="{{script_name}}" class="atualizar_agora">{% trans "update now" %}</a>)</small>
 		</div>
 	</div>
 
     <div class="block_content">
 
         {% if not object_list %}
-            <p>Não existem downloads ativos no momento.</p>
+            <p>{% trans "There are no downloads currently active" %}</p>
         {% else %}
             <table class="request_list">
                 <thead>
                     <tr>
-                        <th>Caminho do arquivo</th>
-                        <th>Criado em</th>
-                        <th>Tentativas</th>
-                        <th>Transferência</th>
-                        <th>Concluído</th>
+                        <th>{% trans "File path" %}</th>
+                        <th>{% trans "Created on" %}</th>
+                        <th>{% trans "Attempts" %}</th>
+                        <th>{% trans "Transference" %}</th>
+                        <th>{% trans "Done" %}</th>
                     </tr>
                 </thead>
 
@@ -39,10 +40,10 @@
                     <tr>
                         <td>{{ object.volume.filename }}</td>
                         <td>{{ object.created_at|date:"d/m/Y H:i" }}</td>
-                        <td align="right">{{ object.attempts }} <small>(última: {{ object.last_attempt }})</small></td>
-                        <td align="right">{{ object.friendly_rate }} <small>(tempo restante: {{ object.estimated_transfer_time }})</small></td>
+                        <td align="right">{{ object.attempts }} <small>({% trans "Last:" %} {{ object.last_attempt }})</small></td>
+                        <td align="right">{{ object.friendly_rate }} <small>({% trans "Time left" %} {{ object.estimated_transfer_time }})</small></td>
                         <td align="right">
-                            <div class="concluido_wrapper" title="{{ object.finished_percent }}% concluído.">
+                            <div class="concluido_wrapper" title="{{ object.finished_percent }}{% trans "% completed." %}">
                                 <div class="concluido_percent" style="width: {{ object.finished_percent }}%">&nbsp;</div>
                             </div>
                         </td>
